[gd_scene load_steps=31 format=2]

[ext_resource path="res://raw-art/icons/Transperent/Icon47.png" type="Texture" id=1]
[ext_resource path="res://raw-art/icons/Transperent/Icon19.png" type="Texture" id=2]
[ext_resource path="res://raw-art/icons/Transperent/Icon20.png" type="Texture" id=3]
[ext_resource path="res://raw-art/icons/Transperent/Icon21.png" type="Texture" id=4]
[ext_resource path="res://assets/spells/10 Fire ball/Fire-ball.png" type="Texture" id=5]
[ext_resource path="res://raw-art/0x72_DungeonTilesetII_v1.3.1/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=6]
[ext_resource path="res://scripts/FireTower.gd" type="Script" id=7]
[ext_resource path="res://assets/spells/4 Sun strike/Sun-strike.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0867

[sub_resource type="CircleShape2D" id=2]
radius = 81.9122

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 648, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FireTower" type="Area2D"]
script = ExtResource( 7 )

[node name="BuildShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.361237, 0.441711 )
shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[node name="Build" type="Sprite" parent="."]
position = Vector2( 5.81787, 5.19477 )
scale = Vector2( 0.320384, 0.302846 )
texture = ExtResource( 3 )

[node name="Hammer" type="Sprite" parent="Build"]
visible = false
position = Vector2( -14.8898, -19.2268 )
scale = Vector2( 2.38224, 2.56363 )
texture = ExtResource( 1 )

[node name="Icon19" type="Sprite" parent="Build"]
position = Vector2( -35.6919, -32.6624 )
texture = ExtResource( 2 )

[node name="Icon21" type="Sprite" parent="Build"]
position = Vector2( -23.2106, 12.7407 )
scale = Vector2( 0.685234, 0.768351 )
texture = ExtResource( 4 )

[node name="Built" type="Sprite" parent="."]
visible = false
position = Vector2( -0.285324, -9.32709 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Built"]
position = Vector2( 9.43874, -29.7321 )
rotation = 1.5708
scale = Vector2( 0.8, 0.6 )
frames = SubResource( 11 )
frame = 3
speed_scale = 2.0
playing = true

[node name="CastPosition" type="Position2D" parent="Built"]
position = Vector2( 0, -20.602 )

[node name="Building" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.26134, -30.6927 )
frames = SubResource( 22 )
speed_scale = 4.0
[connection signal="mouse_entered" from="." to="." method="_on_FireTower_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_FireTower_mouse_exited"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="animation_finished" from="Building" to="." method="_on_Building_animation_finished"]
